--- a/AtkTennisWeb/Views/Shared/_Layout.cshtml
+++ b/AtkTennisWeb/Views/Shared/_Layout.cshtml
@@ -221,7 +221,7 @@
                         @if (Mutuals.UserSettings[HttpContextAccessor.HttpContext.Session.GetString("RoleId")].Dashboard)
                         {
                             <li class="nav-item menu-open">
-                                <a style="background-color:#d4ff0761" href="~/AdminHome/Index" class="nav-link active">
+                                <a style="background-color:#d4ff0761" href="~/AdminHome/Index?date=@date" class="nav-link active">
                                     <i class="nav-icon fas fa-tachometer-alt"></i>
                                     <p>
                                         Yönetim Bilgi Ekranı
@@ -296,10 +296,10 @@
                                     </a>
                                 </li>
 
-                                @*<li class="nav-item">
-                                        <a href="~/Admin/ReservationTable" class="nav-link">
+                                <li class="nav-item">
+                                        <a href="~/Public/ReservationCancel" class="nav-link">
                                             <i class="far fa-window-close nav-icon"></i>
-                                            <p>Rezervasyon İptali</p>
+                                            <p>Rezervasyon İptal</p>
                                         </a>
                                     </li>
 
@@ -308,7 +308,7 @@
                                             <i class="fas fa-wallet nav-icon"></i>
                                             <p>Üyelik Aidatlarım</p>
                                         </a>
-                                    </li>*@
+                                    </li>
                             </ul>
                         </li>
 
