--- a/AtkTennisWeb/Views/Public/MemberInf.cshtml
+++ b/AtkTennisWeb/Views/Public/MemberInf.cshtml
@@ -53,7 +53,7 @@
 
 
                                     <div class="align-self-center">
-                                        <h3>Toplam Bakiye: 1375 ₺<i style="font-size:25px; margin-left:10px ; color:darkmagenta" class="fas fa-tags"></i></h3>
+                                        <h3>Toplam Bakiye: @item.Price ₺<i style="font-size:25px; margin-left:10px ; color:darkmagenta" class="fas fa-tags"></i></h3>
                                     </div>
                                 </div>
                             </div>
